--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/variablestudio/pex-cam.git"
+    "url": "https://github.com/pex-gl/pex-cam.git"
   },
   "keywords": [
     "pex",
@@ -30,7 +30,7 @@
   }],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/variablestudio/pex-cam/issues"
+    "url": "https://github.com/pex-gl/pex-cam/issues"
   },
-  "homepage": "https://github.com/variablestudio/pex-cam"
+  "homepage": "https://github.com/pex-gl/pex-cam"
 }
