--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,7 @@
     "pex-context": "^2.0.0-5",
     "pex-gl": "^1.3.0",
     "pex-math": "^1.0.1",
+    "pex-random": "^1.0.1",
     "primitive-cube": "^2.0.0",
     "regl": "^1.3.0"
   }
