--- a/example/package.json
+++ b/example/package.json
@@ -13,11 +13,10 @@
     "glsl-inverse": "^1.0.0",
     "glsl-transpose": "^1.0.0",
     "glslify": "^6.0.1",
-    "pex-context": "^2.0.0-5",
+    "pex-context": "^2.0.0-34",
     "pex-gl": "^1.3.0",
-    "pex-math": "^1.0.1",
+    "pex-math": "^2.0.0",
     "pex-random": "^1.0.1",
-    "primitive-cube": "^2.0.0",
-    "regl": "^1.3.0"
+    "primitive-cube": "^2.0.0"
   }
 }
