--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   "homepage": "https://github.com/pex-gl/pex-cam",
   "dependencies": {
     "interpolate-angle": "^1.0.2",
+    "latlon-to-xyz": "^1.0.1",
     "pex-geom": "^1.0.0",
     "pex-math": "^2.0.0",
-    "raf": "^3.4.0"
+    "raf": "^3.4.0",
+    "xyz-to-latlon": "^1.0.2"
   }
 }
