--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "interpolate-angle": "^1.0.2",
     "latlon-to-xyz": "^1.0.1",
+    "mouse-event-offset": "^3.0.2",
     "pex-geom": "^2.0.1",
     "pex-math": "^2.0.0",
     "raf": "^3.4.0",
