--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,6 @@
   "author": "Marcin Ignac <marcin.ignac@gmail.com> (http://marcinignac.com/)",
   "license": "MIT",
   "dependencies": {
-    "budo": "^9.2.1",
     "glsl-inverse": "^1.0.0",
     "glsl-transpose": "^1.0.0",
     "glslify": "^6.0.1",
@@ -18,5 +17,8 @@
     "pex-math": "^2.0.0",
     "pex-random": "^1.0.1",
     "primitive-cube": "^2.0.0"
+  },
+  "devDependencies": {
+    "budo": "^11.3.2"
   }
 }
