--- a/package.json
+++ b/package.json
@@ -1,43 +1,53 @@
 {
   "name": "pex-cam",
   "version": "2.8.0",
-  "description": "Camera models and modifiers.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/pex-gl/pex-cam.git"
-  },
+  "description": "Cameras models and controllers for 3D rendering.",
   "keywords": [
     "pex",
-    "webgl"
+    "cam",
+    "webgl",
+    "3d",
+    "cameras",
+    "perspective",
+    "orthographic",
+    "orbiter"
   ],
-  "author": {
-    "name": "Henryk Wollik",
-    "email": "hwollik@hotmail.com",
-    "url": "http://henrykwollik.com"
-  },
-  "contributors": [
-    {
-      "name": "Marcin Ignac",
-      "email": "marcin.ignac@gmail.com",
-      "url": "http://marcinignac.com"
-    }
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/pex-gl/pex-cam/issues"
-  },
   "homepage": "https://github.com/pex-gl/pex-cam",
+  "bugs": "https://github.com/pex-gl/pex-cam/issues",
+  "repository": "pex-gl/pex-cam",
+  "license": "MIT",
+  "author": "Henryk Wollik <hwollik@hotmail.com> (http://henrykwollik.com)",
+  "contributors": [
+    "Marcin Ignac <marcin.ignac@gmail.com> (http://marcinignac.com)",
+    "Damien Seguin (https://github.com/dmnsgn)"
+  ],
+  "type": "module",
+  "exports": "./index.js",
+  "main": "index.js",
+  "types": "types/index.d.ts",
   "dependencies": {
     "interpolate-angle": "^1.0.2",
     "latlon-to-xyz": "^1.0.1",
     "mouse-event-offset": "^3.0.2",
-    "pex-geom": "^2.0.1",
-    "pex-math": "^2.0.0",
-    "raf": "^3.4.0",
+    "pex-geom": "^2.0.2",
+    "pex-math": "github:pex-gl/pex-math#v4",
+    "raf": "^3.4.1",
     "xyz-to-latlon": "^1.0.2"
+  },
+  "devDependencies": {
+    "assert": "^2.0.0",
+    "core-js": "^3.21.1",
+    "es-module-shims": "^1.4.6",
+    "pex-context": "^2.10.4",
+    "pex-gui": "^2.4.0",
+    "pex-random": "^1.0.1",
+    "primitive-cube": "^2.0.1"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=7.0.0"
+  },
+  "snowdev": {
+    "dependencies": "all"
   }
 }
