--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pex-cam",
   "version": "2.8.0",
-  "description": "Cameras models and controllers for 3D rendering.",
+  "description": "Cameras models and controllers for 3D rendering in PEX.",
   "keywords": [
     "pex",
     "cam",
@@ -31,13 +31,12 @@
     "mouse-event-offset": "^3.0.2",
     "pex-geom": "^2.0.2",
     "pex-math": "github:pex-gl/pex-math#v4",
-    "raf": "^3.4.1",
     "xyz-to-latlon": "^1.0.2"
   },
   "devDependencies": {
     "assert": "^2.0.0",
     "core-js": "^3.21.1",
-    "es-module-shims": "^1.4.6",
+    "es-module-shims": "^1.4.7",
     "pex-context": "^2.10.4",
     "pex-gui": "^2.4.0",
     "pex-random": "^1.0.1",
