--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "interpolate-angle": "^1.0.2",
     "latlon-to-xyz": "^1.0.1",
     "mouse-event-offset": "^3.0.2",
-    "pex-geom": "^2.0.2",
+    "pex-geom": "github:pex-gl/pex-geom#v3",
     "pex-math": "github:pex-gl/pex-math#v4",
     "xyz-to-latlon": "^1.0.2"
   },
