--- a/package.json
+++ b/package.json
@@ -34,18 +34,16 @@
     "interpolate-angle": "^1.0.2",
     "latlon-to-xyz": "^1.0.1",
     "mouse-event-offset": "^3.0.2",
-    "pex-geom": "github:pex-gl/pex-geom#v3",
-    "pex-math": "github:pex-gl/pex-math#v4",
+    "pex-geom": "^3.0.0-alpha.0",
+    "pex-math": "^4.0.0-alpha.1",
     "xyz-to-latlon": "^1.0.2"
   },
   "devDependencies": {
-    "assert": "^2.0.0",
-    "core-js": "^3.21.1",
-    "es-module-shims": "^1.4.7",
-    "pex-context": "^2.11.0-2",
+    "es-module-shims": "^1.5.8",
+    "pex-context": "github:pex-gl/pex-context#v3",
     "pex-gui": "github:pex-gl/pex-gui#v3",
     "pex-random": "github:pex-gl/pex-random#v2",
-    "primitive-cube": "^2.0.1"
+    "primitive-geometry": "^2.7.0"
   },
   "engines": {
     "node": ">=16.0.0",
