--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pex-cam",
-  "version": "2.8.0",
+  "version": "3.0.0-alpha.0",
   "description": "Cameras models and controllers for 3D rendering in PEX.",
   "keywords": [
     "pex",
