--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "Damien Seguin (https://github.com/dmnsgn)"
   ],
   "type": "module",
-  "exports": "./index.js",
+  "exports": {
+    ".": {
+      "types": "./types/index.d.ts",
+      "default": "./index.js"
+    }
+  },
   "main": "index.js",
   "types": "types/index.d.ts",
   "scripts": {
@@ -46,8 +51,9 @@
     "primitive-geometry": "^2.7.0"
   },
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=7.0.0"
+    "node": ">=22.0.0",
+    "npm": ">=10.5.1",
+    "snowdev": ">=2.5.x"
   },
   "snowdev": {
     "dependencies": "all"
