--- a/package.json
+++ b/package.json
@@ -39,16 +39,16 @@
     "interpolate-angle": "^1.0.2",
     "latlon-to-xyz": "^1.0.1",
     "mouse-event-offset": "^3.0.2",
-    "pex-geom": "^3.0.0-alpha.0",
-    "pex-math": "^4.0.0-alpha.1",
+    "pex-geom": "^3.1.0",
+    "pex-math": "^4.1.2",
     "xyz-to-latlon": "^1.0.2"
   },
   "devDependencies": {
-    "es-module-shims": "^1.5.8",
-    "pex-context": "github:pex-gl/pex-context#v3",
+    "es-module-shims": "^2.6.2",
+    "pex-context": "^3.3.0",
     "pex-gui": "github:pex-gl/pex-gui#v3",
-    "pex-random": "github:pex-gl/pex-random#v2",
-    "primitive-geometry": "^2.7.0"
+    "pex-random": "^2.1.2",
+    "primitive-geometry": "^2.11.0"
   },
   "engines": {
     "node": ">=22.0.0",
